--- a/asset/css/home-page.css
+++ b/asset/css/home-page.css
@@ -8,6 +8,11 @@ body{
     --var-color-button: rgba(75, 107, 251, 1);
     --var-color-6: #696A75;
     --var-color-e: #e8e8ea;
+    --var-color-3: #3b3c4a;
+    --var-color-18: #181a2a;
+    --var-color-f4: #f4f4f5;
+    --var-color-d: #dcdddf;
+    --var-color-white: #fff;
 }
 
 .width-1200{
@@ -18,7 +23,7 @@ body{
 li, a {
     text-decoration: none;
     list-style: none;
-    color : #3b3c4a;
+    color : var(--var-color-3);
     font-weight: 400;
 }
 
@@ -27,10 +32,15 @@ li, a {
 
 header,
 nav,
-form{
+header form{
     display: flex;
     justify-content: space-between;
     padding: 32px 0;
+}
+
+nav ul{
+    display: flex;
+    justify-content: space-between;
 }
 
 
@@ -40,39 +50,39 @@ form{
 }
 
 
-.item_menu{
-    font-size: 16px;
+.item-menu{
+    font-size: 15px;
     line-height: var(--var-sz);
     padding: 0 50px;
 }
 
 
-
-
-.item_ipt:first-child {
+.item-ipt:first-child {
     width: 166px;
     height: 18px;
     border-radius: 5px;
     padding: 8px 8px 8px 16px;
     gap: 12px;
-    background-color: #f4f4f5;
+    background-color: var(--var-color-f4);
     margin-right: 10px;
+    display: flex;
 }
 
-.item_ipt:first-child input {
+.item-ipt:first-child input {
     border: none;
     outline: none;
-    background-color: #f4f4f5;
+    background-color: var(--var-color-f4);
+    display: flex;
 }
 
-.item_ipt i {
+.item-ipt i {
     width: 4px;
     height: 4px;
     color: #52525b;
     border-radius: 2px;
 }
 
-.item_ipt:last-child{
+.item-ipt:last-child{
     display: flex;
     width: 48px;
     height: 28px;
@@ -82,7 +92,7 @@ form{
 .switch-toggle{
     width: 38px;
     appearance: none;
-    background-color: #ccc;
+    background-color: var(--var-color-e);
     border-radius: 26px;
     position: relative;
     cursor: pointer;
@@ -96,7 +106,7 @@ form{
     position: absolute;
     top: 2px;
     left: 3px;
-    background-color:white;
+    background-color:var(--var-color-white);
     border-radius: 50%;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, .3);
 
@@ -113,62 +123,79 @@ form{
 
 
 
-.form_introduce{
+.form-introduce{
     position: absolute;
     gap: 24px;
     width: 598px;
     top: 550px;
     border-radius: 12px;
     left: 160px;
-    background-color: white;
+    background-color: var(--var-color-white);
     padding: 40px;
     border: 1px solid var( --var-color-e);
-    box-shadow: 0 12px 24px -6px #181A2A ;
+    box-shadow: 0 12px 24px -6px var(--var-color-18) ;
 }
 
-.form_introduce span:first-child {
+.form-introduce .tag {
     background-color: var(--var-color-button);
-    color: white;
-    border: none;
-    outline: none;
-    padding: 4px 10px;
-    border-radius: 6px;
+    color: var(--var-color-white);
     font-size: 14px;
-    line-height: 20px;
-    font-weight: 500;
-    width: 97px;
 }
 
-.form_introduce h2{
+.form-introduce h2{
     font-weight: 600;
     font-size: 36px;
     line-height: 40px;
-    color: rgba(24, 26, 42, 1);
+    color: var(--var-color-18);
     margin: 15px 0;
 }
 
-.infor{
+.infor-user{
     display: flex;
     width: 321px;
     height: 36px;
     gap: 20px;
     padding: 0;
+    font-size: 16px;
+    line-height: var(--var-sz);
+    font-weight: 500;
+    color: #97989f;
+}
+.infor-user time {
+    line-height: 40px;
+    color: #97989f;
 }
 
 
-.infor span {
-    line-height: 30px;
+.infor-user span {
+    line-height: 24px;
 }
 
-.infor img {
+.user img {
     width: 36px;
     height: 36px;
 }
 
+.user span {
+    position: relative;
+    bottom: 20px;
 
-.adver{
+}
+
+.form-introduce .user span{
+    bottom: 10px;
+}
+
+
+
+
+
+
+
+
+.advertisement{
     text-align: center;
-    background-color: #ccc;
+    background-color: var(--var-color-e);
     width: 750px;
     height: 100px;
     border-radius: 12px;
@@ -178,26 +205,26 @@ form{
     line-height: 40px;
 }
 
-.adver span {
+.advertisement span {
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     color: var(--var-color-6);
 }
 
-.adver span:last-child{
+.advertisement span:last-child{
     font-size: 18px;
     line-height: 26px;
 }
 
-.adver h4 {
+.advertisement h4 {
     font-weight: 600;
     font-size: 20px;
     line-height: var(--var-sz);
     color: var(--var-color-6);
 }
 
-.adver:last-child{
+.advertisement:last-child{
     margin: 100px auto 70px auto;
 }
 
@@ -208,14 +235,14 @@ form{
     margin-bottom: 30px;
 }
 
-.list_data{
+.list-data{
     gap: 20px;
     display: flex;
     flex-wrap: wrap;
     margin: auto;
 }
 
-.item_data{
+.item-data{
     border: 1px solid var( --var-color-e);
     width: 352px;
     height: 435px;
@@ -225,17 +252,17 @@ form{
     cursor: pointer;
 }
 
-.item_data img:first-child {
+.item-data img{
     margin-bottom: 10px;
 }
 
 
-
-.item_data h3{
-    font-size: 600;
+.item-data h4{
+    font-weight: 600;
     font-style: var(--var-sz);
-    line-height: 50px;
-    color: #181A2A;
+    line-height: 28px;
+    color: var(--var-color-18);
+    margin: 10px 0;
 }
 
 .tag{
@@ -243,12 +270,11 @@ form{
     font-size: 15px;
     line-height: 20px;
     font-weight: 500;
-    width: 77px;
-    height: 20px;
     border: none;
-    margin: 10px 0;
-    background-color: #dad7d7;
+    outline: none;
+    background-color: var(--var-color-d);
     border-radius: 6px;
+    padding: 4px 10px;
 }
 
 .view {
@@ -261,7 +287,7 @@ form{
     display: flex;
     justify-content: center;
     padding: 6px  0;
-    margin: auto;
+    margin: 20px  auto 0 auto;
 }
 
 
@@ -271,14 +297,20 @@ form{
 
 footer {
     margin-top: 80px;
-    background-color: var( --var-color-e);
-    border-top: 1px solid var( --var-color-e);
+    background-color: var(--var-color-e);
+    border-top: 1px solid var(--var-color-e);
     padding-top: 20px;
     line-height: 25px;
 }
 
-footer div {
+.firt{
     display: flex;
+}
+
+.firt h5{
+    line-height: 28px;
+    font-size: 17px;
+    margin-bottom: 10px;
 }
 
 footer div:first-child{
@@ -297,14 +329,27 @@ footer div:first-child{
     padding: 0 10px 0 100px;
 }
 
+.quick-link a,
+.category a {
+    line-height: 24px;
+    font-size: 16px;
+}
+
+h5{
+    font-weight: 600;
+}
+
 strong {
     font-weight: 900;
+}
+.list-footer{
+    display: flex;
 }
 
 .form-footer{
     width: 392px;
     text-align: center;
-    background-color: white;
+    background-color: var(--var-color-white);
     border-radius: 12px;
     padding: 32px ;
     margin-left: 50px;
@@ -312,23 +357,32 @@ strong {
 
 
 
-.form_ipt input {
+.form-footer form input {
     width: 290px;
     height: var(--var-sz);
     border-radius: 6px;
-    border: 1px solid #dcdddf;
+    border: 1px solid var(--var-color-d);
     padding: 12px 14px;
     gap: 10px;
     margin: 10px 0;
 }
 
-.form_ipt i {
+.form-footer form i {
     position: relative;
     left: -30px;
     width: 20px;
     height: 20px;
 }
 
+.form-footer form h4{
+    font-weight: 600;
+    line-height: var(--var-sz);
+    font-size: 20px;
+}
+
+.form-footer form p {
+    margin-bottom: 10px;
+}
 
 .btn {
     width: 320px;
@@ -337,7 +391,7 @@ strong {
     padding: 12px 20px;
     gap: 12px;
     background-color: var(--var-color-button);
-    color: white;
+    color: var(--var-color-white);
     margin-right: 22px;
     cursor: pointer;
 }
@@ -346,17 +400,21 @@ strong {
 .last {
     display: flex;
     justify-content: space-between;
-    border-top: 1px solid black;
+    border-top: 1px solid var(--var-color-d);
     padding-top: 18px;
 }
 
-.last ul:last-child{
+.logo-footer{
+    display: flex;
+}
+
+.last ul{
     display: flex;
 }
 
 
-.scorball {
-    border-right: 1px solid #666;
-    margin: 0 6px;
-    position: relative;
+.last li a {
+    border-right: 1px solid var(--var-color-d);
+    padding: 0 6px;
 }
+
