--- a/asset/css/single-post.css
+++ b/asset/css/single-post.css
@@ -7,6 +7,11 @@ body{
     --var-color-button: rgba(75, 107, 251, 1);
     --var-color-6: #696A75;
     --var-color-e: #e8e8ea;
+    --var-color-3: #3b3c4a;
+    --var-color-18: #181a2a;
+    --var-color-f4: #f4f4f5;
+    --var-color-d: #dcdddf;
+    --var-color-white : #fff;
 }
 
 .width-800{
@@ -22,7 +27,7 @@ body{
 li, a {
     text-decoration: none;
     list-style: none;
-    color : #3b3c4a;
+    color : var(--var-color-3);
     margin: 10px 0;
 }
 
@@ -57,14 +62,15 @@ form{
     border-radius: 5px;
     padding: 8px 8px 8px 16px;
     gap: 12px;
-    background-color: #f4f4f5;
+    background-color: var(--var-color-f4);
     margin-right: 10px;
 }
 
 .item_ipt:first-child input {
     border: none;
     outline: none;
-    background-color: #f4f4f5;
+    background-color: var(--var-color-f4);
+    color: #A1A1AA;
 }
 
 .item_ipt i {
@@ -84,7 +90,7 @@ form{
 .switch-toggle{
     width: 38px;
     appearance: none;
-    background-color: #ccc;
+    background-color: var(--var-color-e);
     border-radius: 26px;
     position: relative;
     cursor: pointer;
@@ -98,7 +104,7 @@ form{
     position: absolute;
     top: 2px;
     left: 3px;
-    background-color:white;
+    background-color:var(--var-color-white);
     border-radius: 50%;
     box-shadow: 0px 0px 6px rgba(0, 0, 0, .3);
 
@@ -126,7 +132,7 @@ main{
 
 .form_introduce span:first-child {
     background-color: var(--var-color-button);
-    color: white;
+    color: var(--var-color-white);
     border: none;
     outline: none;
     padding: 6px 12px;
@@ -141,7 +147,7 @@ main{
     font-weight: 600;
     font-size: 36px;
     line-height: 40px;
-    color: rgba(24, 26, 42, 1);
+    color: var(--var-color-18);
     margin: 15px 0;
 }
 
@@ -163,13 +169,13 @@ section p{
     margin: 10px 0;
     font-size: 20px;
     line-height: 32px;
-    color: #3b3c4a;
+    color: var(--var-color-3);
 }
 section h4{
     font-weight: 600;
     font-size: var(--var-sz);
     line-height: 28px;
-    color: #181A2A;
+    color: var(--var-color-18);
     margin: 6px 0;
 }
 
@@ -187,7 +193,7 @@ section h4{
 
 .adver{
     text-align: center;
-    background-color: #ccc;
+    background-color: var(--var-color-e);
     width: 750px;
     height: 100px;
     border-radius: 12px;
@@ -231,7 +237,7 @@ footer {
     padding-top: 20px;
     line-height: 24px;
     font-size: 16px;
-    color: #3b3c4a;
+    color: var(--var-color-3);
 }
 
 footer div {
@@ -262,7 +268,7 @@ strong {
 .form-footer{
     width: 392px;
     text-align: center;
-    background-color: white;
+    background-color: var(--var-color-white);
     border-radius: 12px;
     padding: 32px ;
     margin-left: 50px;
@@ -274,7 +280,7 @@ strong {
     width: 290px;
     height: var(--var-sz);
     border-radius: 6px;
-    border: 1px solid #dcdddf;
+    border: 1px solid var(--var-color-d);
     padding: 12px 14px;
     gap: 10px;
     margin: 10px 0;
@@ -295,7 +301,7 @@ strong {
     padding: 12px 20px;
     gap: 12px;
     background-color: var(--var-color-button);
-    color: white;
+    color: var(--var-color-white);
     margin-right: 22px;
     cursor: pointer;
 }
@@ -304,7 +310,7 @@ strong {
 .last {
     display: flex;
     justify-content: space-between;
-    border-top: 1px solid black;
+    border-top: 1px solid var(--var-color-d);
     padding-top: 18px;
 }
 
@@ -314,7 +320,12 @@ strong {
 
 
 .scorball {
-    border-right: 1px solid #666;
+    border-right: 1px solid var(--var-color-e);
     margin: 0 6px;
     position: relative;
 }
+
+
+
+
+
