--- a/asset/css/home-page.css
+++ b/asset/css/home-page.css
@@ -1,6 +1,12 @@
+@font-face {
+  font-family: WorkSans;
+  src: url(../font/Work_Sans/WorkSans-VariableFont_wght.ttf);
+}
 
 body{
-    font-family: 'Work Sans', sans-serif;
+    font-family: WorkSans;
+    border: none;
+    outline: none;
 }
 
 :root{
@@ -24,7 +30,6 @@ li, a {
     text-decoration: none;
     list-style: none;
     color : var(--var-color-3);
-    font-weight: 400;
 }
 
 /*HEADER*/
@@ -38,9 +43,23 @@ header form{
     padding: 32px 0;
 }
 
-nav ul{
+header form {
+    width: 254px;
+    align-items: center;
+}
+
+nav{
+    width: calc(100% - 254px);
+}
+
+.item-menu{
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.item-menu li:last-child {
+    margin-right: 115px;
 }
 
 
@@ -50,10 +69,10 @@ nav ul{
 }
 
 
-.item-menu{
-    font-size: 15px;
+.item-menu li a{
+    font-size: 16px;
     line-height: var(--var-sz);
-    padding: 0 50px;
+    padding: 0 20px;
 }
 
 
@@ -69,17 +88,23 @@ nav ul{
 }
 
 .item-ipt:first-child input {
-    border: none;
-    outline: none;
     background-color: var(--var-color-f4);
     display: flex;
+    border: none;
+    outline: none;
 }
 
-.item-ipt i {
+.item-ipt button {
     width: 4px;
     height: 4px;
     color: #52525b;
     border-radius: 2px;
+    position: relative;
+    left: -8px;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    
 }
 
 .item-ipt:last-child{
@@ -121,19 +146,20 @@ nav ul{
 /*Main*/
 
 
-
+main section:first-child{
+    position: relative;
+}
 
 .form-introduce{
     position: absolute;
-    gap: 24px;
-    width: 598px;
-    top: 550px;
+    bottom: -64px;
     border-radius: 12px;
-    left: 160px;
+    left: 64px;
     background-color: var(--var-color-white);
     padding: 40px;
     border: 1px solid var( --var-color-e);
-    box-shadow: 0 12px 24px -6px var(--var-color-18) ;
+    display: inline-block;
+    box-shadow: 0px 12px 24px -6px #181a2a1f;
 }
 
 .form-introduce .tag {
@@ -152,40 +178,23 @@ nav ul{
 
 .infor-user{
     display: flex;
-    width: 321px;
-    height: 36px;
-    gap: 20px;
     padding: 0;
     font-size: 16px;
     line-height: var(--var-sz);
     font-weight: 500;
     color: #97989f;
+
 }
 .infor-user time {
     line-height: 40px;
     color: #97989f;
+    line-height: 46px;
 }
 
 
 .infor-user span {
     line-height: 24px;
 }
-
-.user img {
-    width: 36px;
-    height: 36px;
-}
-
-.user span {
-    position: relative;
-    bottom: 20px;
-
-}
-
-.form-introduce .user span{
-    bottom: 10px;
-}
-
 
 
 
@@ -201,12 +210,11 @@ nav ul{
     border-radius: 12px;
     gap: 10px;
     color: var( --var-color-e);
-    margin: 200px auto 70px auto;
+    margin: 145px auto 80px auto;
     line-height: 40px;
 }
 
 .advertisement span {
-    font-weight: 400;
     font-size: 14px;
     line-height: 20px;
     color: var(--var-color-6);
@@ -225,69 +233,93 @@ nav ul{
 }
 
 .advertisement:last-child{
-    margin: 100px auto 70px auto;
+    margin: 80px auto 100px auto;
 }
 
-.title {
+.list-post h4 {
     font-weight: 700;
     font-size: var(--var-sz);
     line-height: 28px;
     margin-bottom: 30px;
 }
 
-.list-data{
-    gap: 20px;
+.posts{
     display: flex;
     flex-wrap: wrap;
     margin: auto;
 }
 
-.item-data{
+.post{
     border: 1px solid var( --var-color-e);
-    width: 352px;
-    height: 435px;
     border-radius: 12px;
     padding: 16px;
-    gap: 16px;
     cursor: pointer;
+    width: calc(30% - 8px);
+    margin: 10px;
 }
 
-.item-data img{
-    margin-bottom: 10px;
+.post img{
+    margin-bottom: var(--var-sz);
+    width: 100%;
 }
 
 
-.item-data h4{
+.post h4{
     font-weight: 600;
     font-style: var(--var-sz);
     line-height: 28px;
     color: var(--var-color-18);
-    margin: 10px 0;
+    margin: 20px 0;
 }
+
+.post:nth-child(3n+1){
+    margin-left: 0;
+}
+.post:nth-child(3n){
+    margin-right: 0;
+}
+
+.user img {
+    width: 36px;
+    height: 36px;
+    margin: 0;
+}
+
+.user{
+    display: flex;
+    align-items: center;
+}
+
+.user span {
+    padding: 0 10px;
+}
+
+
 
 .tag{
     color: var(--var-color-button);
     font-size: 15px;
     line-height: 20px;
     font-weight: 500;
-    border: none;
-    outline: none;
     background-color: var(--var-color-d);
     border-radius: 6px;
     padding: 4px 10px;
+    margin-top: var(--var-sz);
 }
 
 .view {
     width: 142px;
-    height: 28px;
+    height: 48px;
     border: 1px solid var(--var-color-6);
     border-radius: 6px;
     color: var(--var-color-6);
     cursor: pointer;
     display: flex;
     justify-content: center;
-    padding: 6px  0;
+    padding: 12px  20px;
     margin: 20px  auto 0 auto;
+    align-items: center;
+    border: none;
 }
 
 
@@ -305,12 +337,13 @@ footer {
 
 .firt{
     display: flex;
+    justify-content: space-between;
 }
 
 .firt h5{
     line-height: 28px;
-    font-size: 17px;
-    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 footer div:first-child{
@@ -318,26 +351,37 @@ footer div:first-child{
 }
 
 .about{
-    width: 289px;
-    gap: var(--var-sz);
+    width: 25%;
+}
+
+.about p {
+    margin: 12px 0 24px 0;
 }
 
 .quick-link,
 .category{
-    width: 90px;
-    gap: var(--var-sz);
-    padding: 0 10px 0 100px;
+    width: 10%;
+}
+
+.quick-link{
+    margin-left: 40px;
+}
+.category{
+    margin-right: 30px;
+}
+
+.quick-link h5,
+.category h5{
+    margin-bottom: 24px;
 }
 
 .quick-link a,
 .category a {
     line-height: 24px;
     font-size: 16px;
+    padding: 4px 0;
 }
 
-h5{
-    font-weight: 600;
-}
 
 strong {
     font-weight: 900;
@@ -347,12 +391,11 @@ strong {
 }
 
 .form-footer{
-    width: 392px;
+    width: 32%;
     text-align: center;
     background-color: var(--var-color-white);
     border-radius: 12px;
     padding: 32px ;
-    margin-left: 50px;
 }
 
 
@@ -386,7 +429,6 @@ strong {
 
 .btn {
     width: 320px;
-    height: 48px;
     border-radius: 6px;
     padding: 12px 20px;
     gap: 12px;
@@ -401,15 +443,18 @@ strong {
     display: flex;
     justify-content: space-between;
     border-top: 1px solid var(--var-color-d);
-    padding-top: 18px;
+    padding-top: 16px;
 }
 
-.logo-footer{
-    display: flex;
+
+.logo-footer img {
+    margin-right: 4px;
 }
 
+.logo-footer,
 .last ul{
     display: flex;
+    align-items: center;
 }
 
 
@@ -418,3 +463,6 @@ strong {
     padding: 0 6px;
 }
 
+.last li:last-child a{
+    border-right: none;
+}
