--- a/asset/style/home-page.css
+++ b/asset/style/home-page.css
@@ -1,15 +1,56 @@
+/*Font Work Sans*/
+
 @font-face {
-  font-family: WorkSans;
-  src: url(../font/Work_Sans/WorkSans-VariableFont_wght.ttf);
+    font-family: 'WorkSans';
+    src: url(../font/Work_Sans/static/WorkSans-Bold.ttf);
+    font-weight: 700;
 }
 
-body{
-    font-family: WorkSans;
+@font-face {
+    font-family: 'WorkSans';
+    src: url(../font/Work_Sans/static/WorkSans-SemiBold.ttf);
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'WorkSans';
+    src: url(../font/Work_Sans/static/WorkSans-Medium.ttf);
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: 'WorkSans';
+    src: url(../font/Work_Sans/static/WorkSans-Regular.ttf);
+    font-weight: 400;
+}
+
+
+/*Font Plus Jakarta Sans*/
+@font-face {
+    font-family: 'PlusJakartaSans';
+    src: url(../font/Plus_Jakarta_Sans/static/PlusJakartaSans-Regular.ttf);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: 'PlusJakartaSans';
+    src: url(../font/Plus_Jakarta_Sans/static/PlusJakartaSans-SemiBold.ttf);
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: 'PlusJakartaSans';
+    src: url(../font/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraBold.ttf);
+    font-weight: 800;
+}
+
+body {
+    font-family: 'WorkSans';
     border: none;
     outline: none;
 }
 
-:root{
+:root {
     --var-sz: 24px;
     --var-color-button: rgba(75, 107, 251, 1);
     --var-color-6: #696A75;
@@ -21,26 +62,31 @@ body{
     --var-color-white: #fff;
 }
 
-.width-1200{
+.width-1200 {
     width: 1200px;
     margin: 0 auto;
 }
 
-li, a {
+li,
+a {
     text-decoration: none;
     list-style: none;
-    color : var(--var-color-3);
+    color: var(--var-color-3);
 }
 
 /*HEADER*/
 
 
+header {
+    padding: 32px 0 56px 0;
+}
+
+header form,
+.item-menu,
 header,
-nav,
-header form{
+nav {
     display: flex;
     justify-content: space-between;
-    padding: 32px 0;
 }
 
 header form {
@@ -48,14 +94,13 @@ header form {
     align-items: center;
 }
 
-nav{
+nav {
     width: calc(100% - 254px);
 }
 
-.item-menu{
-    display: flex;
-    justify-content: space-between;
+.item-menu {
     align-items: center;
+    font-weight: 400;
 }
 
 .item-menu li:last-child {
@@ -64,27 +109,25 @@ nav{
 
 
 
-.logo{
+.logo {
     margin-right: 44px;
 }
 
 
-.item-menu li a{
+.item-menu li a {
     font-size: 16px;
     line-height: var(--var-sz);
     padding: 0 20px;
+    border-radius: 5px;
 }
 
 
 .item-ipt:first-child {
-    width: 166px;
-    height: 18px;
-    border-radius: 5px;
-    padding: 8px 8px 8px 16px;
-    gap: 12px;
     background-color: var(--var-color-f4);
     margin-right: 10px;
     display: flex;
+    position: relative;
+    border-radius: 5px;
 }
 
 .item-ipt:first-child input {
@@ -92,6 +135,13 @@ nav{
     display: flex;
     border: none;
     outline: none;
+    padding: 8px 36px 8px 16px;
+    border-radius: 5px;
+}
+
+.item-ipt:first-child input::placeholder {
+    color: #A1A1AA;
+    font-weight: 400;
 }
 
 .item-ipt button {
@@ -99,65 +149,65 @@ nav{
     height: 4px;
     color: #52525b;
     border-radius: 2px;
-    position: relative;
-    left: -8px;
+    position: absolute;
+    right: 17px;
+    bottom: 20px;
     cursor: pointer;
     border: none;
     outline: none;
-    
 }
 
-.item-ipt:last-child{
+.item-ipt:last-child {
     display: flex;
-    width: 48px;
-    height: 28px;
     border-radius: 100px;
 }
 
-.switch-toggle{
-    width: 38px;
+.switch-toggle {
+    width: 48px;
+    height: 28px;
     appearance: none;
     background-color: var(--var-color-e);
-    border-radius: 26px;
+    border-radius: 100px;
     position: relative;
     cursor: pointer;
-    box-shadow: inset 0px 0px 16px rgba(0, 0, 0, .3);
 
 }
-.switch-toggle::before{
+
+.switch-toggle::before {
     content: "";
-    width: 18px;
-    height: 18px;
+    width: 24px;
+    height: 24px;
     position: absolute;
     top: 2px;
     left: 3px;
-    background-color:var(--var-color-white);
+    background-color: var(--var-color-white);
     border-radius: 50%;
-    box-shadow: 0px 0px 6px rgba(0, 0, 0, .3);
 
 }
-.switch-toggle:checked{
+
+.switch-toggle:checked {
     background-color: var(--var-color-button);
 }
-.switch-toggle:checked:before{
-    left: 16px;
+
+.switch-toggle:checked:before {
+    left: 20px;
 }
 
 /*Main*/
 
 
-main section:first-child{
+main section:first-child {
     position: relative;
 }
 
-.form-introduce{
+.form-introduce {
     position: absolute;
     bottom: -64px;
     border-radius: 12px;
     left: 64px;
     background-color: var(--var-color-white);
     padding: 40px;
-    border: 1px solid var( --var-color-e);
+    border: 1px solid var(--var-color-e);
     display: inline-block;
     box-shadow: 0px 12px 24px -6px #181a2a1f;
 }
@@ -168,59 +218,62 @@ main section:first-child{
     font-size: 14px;
 }
 
-.form-introduce h2{
+.form-introduce h2 {
     font-weight: 600;
     font-size: 36px;
     line-height: 40px;
     color: var(--var-color-18);
-    margin: 15px 0;
+    margin: 16px 0 24px 0;
 }
 
-.infor-user{
+.infor-user {
     display: flex;
     padding: 0;
     font-size: 16px;
     line-height: var(--var-sz);
     font-weight: 500;
     color: #97989f;
+    margin-bottom: 8px;
 
 }
-.infor-user time {
-    line-height: 40px;
+
+.user span {
+    line-height: var(--var-sz);
+    padding-left: 12px;
+    font-weight: 500;
+    font-size: 16px;
+}
+
+time {
     color: #97989f;
-    line-height: 46px;
+    line-height: var(--var-sz);
+    margin-left: 20px;
+    font-size: 16px;
+    align-items: center;
+    display: flex;
+    font-weight: 400;
 }
 
 
-.infor-user span {
-    line-height: 24px;
-}
-
-
-
-
-
-
-
-.advertisement{
+.advertisement {
     text-align: center;
     background-color: var(--var-color-e);
     width: 750px;
-    height: 100px;
     border-radius: 12px;
-    gap: 10px;
-    color: var( --var-color-e);
+    color: var(--var-color-e);
     margin: 145px auto 80px auto;
     line-height: 40px;
+    padding: 15px 0;
 }
 
-.advertisement span {
+.advertisement p {
     font-size: 14px;
     line-height: 20px;
     color: var(--var-color-6);
+    font-weight: 400;
 }
 
-.advertisement span:last-child{
+.advertisement p:last-child {
     font-size: 18px;
     line-height: 26px;
 }
@@ -232,7 +285,7 @@ main section:first-child{
     color: var(--var-color-6);
 }
 
-.advertisement:last-child{
+.advertisement:last-child {
     margin: 80px auto 100px auto;
 }
 
@@ -240,17 +293,17 @@ main section:first-child{
     font-weight: 700;
     font-size: var(--var-sz);
     line-height: 28px;
-    margin-bottom: 30px;
+    margin-bottom: 22px;
 }
 
-.posts{
+.posts {
     display: flex;
     flex-wrap: wrap;
     margin: auto;
 }
 
-.post{
-    border: 1px solid var( --var-color-e);
+.post {
+    border: 1px solid var(--var-color-e);
     border-radius: 12px;
     padding: 16px;
     cursor: pointer;
@@ -258,24 +311,23 @@ main section:first-child{
     margin: 10px;
 }
 
-.post img{
+.post img {
     margin-bottom: var(--var-sz);
     width: 100%;
 }
 
 
-.post h4{
+.post h4 {
     font-weight: 600;
-    font-style: var(--var-sz);
-    line-height: 28px;
     color: var(--var-color-18);
     margin: 20px 0;
 }
 
-.post:nth-child(3n+1){
+.post:nth-child(3n+1) {
     margin-left: 0;
 }
-.post:nth-child(3n){
+
+.post:nth-child(3n) {
     margin-right: 0;
 }
 
@@ -285,22 +337,19 @@ main section:first-child{
     margin: 0;
 }
 
-.user{
+.user {
     display: flex;
     align-items: center;
 }
 
-.user span {
-    padding: 0 10px;
-}
 
 
 
-.tag{
+.tag {
+    font-weight: 500;
     color: var(--var-color-button);
     font-size: 15px;
     line-height: 20px;
-    font-weight: 500;
     background-color: var(--var-color-d);
     border-radius: 6px;
     padding: 4px 10px;
@@ -308,21 +357,18 @@ main section:first-child{
 }
 
 .view {
-    width: 142px;
-    height: 48px;
     border: 1px solid var(--var-color-6);
     border-radius: 6px;
     color: var(--var-color-6);
     cursor: pointer;
     display: flex;
     justify-content: center;
-    padding: 12px  20px;
-    margin: 20px  auto 0 auto;
+    padding: 12px 20px;
+    margin: 22px auto 0 auto;
     align-items: center;
     border: none;
+    font-weight: 500;
 }
-
-
 
 
 /*Footer*/
@@ -333,69 +379,94 @@ footer {
     border-top: 1px solid var(--var-color-e);
     padding-top: 20px;
     line-height: 25px;
+    font-family: 'PlusJakartaSans';
 }
 
-.firt{
+
+
+.first {
     display: flex;
-    justify-content: space-between;
+    margin: 64px auto;
 }
 
-.firt h5{
+.about li,
+p,
+a {
+    color: var(--var-color-6)
+}
+
+.first h5 {
     line-height: 28px;
     font-size: 16px;
     font-weight: 600;
+    color: var(--var-color-18);
+    padding-right: 5px;
+    font-weight: 600;
 }
 
-footer div:first-child{
-    margin-bottom: 20px;
-}
 
-.about{
+
+.about {
     width: 25%;
 }
 
 .about p {
     margin: 12px 0 24px 0;
-}
-
-.quick-link,
-.category{
-    width: 10%;
-}
-
-.quick-link{
-    margin-left: 40px;
-}
-.category{
-    margin-right: 30px;
-}
-
-.quick-link h5,
-.category h5{
-    margin-bottom: 24px;
-}
-
-.quick-link a,
-.category a {
-    line-height: 24px;
     font-size: 16px;
-    padding: 4px 0;
+    line-height: 24px;
+    font-weight: 400;
 }
 
-
-strong {
-    font-weight: 900;
-}
-.list-footer{
+.about ul li {
     display: flex;
 }
 
-.form-footer{
+
+
+.quick-link,
+.category {
+    width: 10%;
+}
+
+.quick-link {
+    margin: 0 40px 0 140px;
+}
+
+.category {
+    margin: 0 140px 0 40px;
+}
+
+.quick-link h5,
+.category h5 {
+    margin-bottom: 24px;
+}
+
+.quick-link ul li a,
+.category ul li a {
+    line-height: 24px;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.quick-link ul li,
+.category ul li {
+    margin-bottom: 8px;
+}
+
+.list-footer {
+    display: flex;
+    align-items: center;
+    font-weight: 400;
+}
+
+.form-footer {
     width: 32%;
     text-align: center;
     background-color: var(--var-color-white);
     border-radius: 12px;
-    padding: 32px ;
+    padding: 32px;
+    position: relative;
+    font-family: 'WorkSans';
 }
 
 
@@ -406,36 +477,43 @@ strong {
     border-radius: 6px;
     border: 1px solid var(--var-color-d);
     padding: 12px 14px;
-    gap: 10px;
     margin: 10px 0;
+
+}
+
+.form-footer form input::placeholder {
+    color: #97989F;
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 400;
 }
 
 .form-footer form i {
-    position: relative;
-    left: -30px;
-    width: 20px;
-    height: 20px;
+    position: absolute;
+    bottom: 110px;
+    right: 50px;
 }
 
-.form-footer form h4{
+.form-footer form h4 {
     font-weight: 600;
     line-height: var(--var-sz);
     font-size: 20px;
+    margin-bottom: 8px;
 }
 
 .form-footer form p {
-    margin-bottom: 10px;
+    font-weight: 400;
+    margin-bottom: 30px;
 }
 
-.btn {
+.form-footer form button {
     width: 320px;
     border-radius: 6px;
     padding: 12px 20px;
-    gap: 12px;
     background-color: var(--var-color-button);
     color: var(--var-color-white);
-    margin-right: 22px;
     cursor: pointer;
+    margin-top: 8px;
 }
 
 
@@ -443,26 +521,40 @@ strong {
     display: flex;
     justify-content: space-between;
     border-top: 1px solid var(--var-color-d);
-    padding-top: 16px;
+    padding: 32px 0;
 }
 
 
 .logo-footer img {
-    margin-right: 4px;
+    margin-right: 10px;
 }
 
 .logo-footer,
-.last ul{
+.last ul {
     display: flex;
     align-items: center;
+}
+
+.logo-footer span a p:first-child {
+    margin-bottom: 2px;
+}
+
+.logo-footer span a p {
+    font-weight: 400;
+}
+
+strong {
+    font-weight: 800;
 }
 
 
 .last li a {
     border-right: 1px solid var(--var-color-d);
-    padding: 0 6px;
+    padding: 0 16px;
+    font-weight: 400;
 }
 
-.last li:last-child a{
+.last li:last-child a {
     border-right: none;
+    padding-right: 0;
 }
