--- a/asset/style/author-page.css
+++ b/asset/style/author-page.css
@@ -2,25 +2,25 @@
 
 @font-face {
     font-family: 'WorkSans';
-    src: url(../font/Work_Sans/static/WorkSans-Bold.ttf);
+    src: url(../font/Work_Sans/WorkSans-Bold.ttf);
     font-weight: 700;
 }
 
 @font-face {
     font-family: 'WorkSans';
-    src: url(../font/Work_Sans/static/WorkSans-SemiBold.ttf);
+    src: url(../font/Work_Sans/WorkSans-SemiBold.ttf);
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'WorkSans';
-    src: url(../font/Work_Sans/static/WorkSans-Medium.ttf);
+    src: url(../font/Work_Sans/WorkSans-Medium.ttf);
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'WorkSans';
-    src: url(../font/Work_Sans/static/WorkSans-Regular.ttf);
+    src: url(../font/Work_Sans/WorkSans-Regular.ttf);
     font-weight: 400;
 }
 
@@ -28,19 +28,19 @@
 /*Font Plus Jakarta Sans*/
 @font-face {
     font-family: 'PlusJakartaSans';
-    src: url(../font/Plus_Jakarta_Sans/static/PlusJakartaSans-Regular.ttf);
+    src: url(../font/Plus_Jakarta_Sans/PlusJakartaSans-Regular.ttf);
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'PlusJakartaSans';
-    src: url(../font/Plus_Jakarta_Sans/static/PlusJakartaSans-SemiBold.ttf);
+    src: url(../font/Plus_Jakarta_Sans/PlusJakartaSans-SemiBold.ttf);
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'PlusJakartaSans';
-    src: url(../font/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraBold.ttf);
+    src: url(../font/Plus_Jakarta_Sans/PlusJakartaSans-ExtraBold.ttf);
     font-weight: 800;
 }
 
@@ -61,7 +61,8 @@ body {
     --var-color-f4: #f4f4f5;
     --var-color-d: #dcdddf;
     --var-color-white: #fff;
-    --var-color-9: #97989F;
+    --var-color-f6: #F6F6F7;
+    --var-color-14: #141624;
 }
 
 .width-1200 {
@@ -140,7 +141,7 @@ nav {
     display: flex;
     border: none;
     outline: none;
-    padding: 8px 36px 8px 16px;
+    padding: 10px 36px 10px 16px;
     border-radius: 5px;
 }
 
@@ -156,7 +157,7 @@ nav {
     border-radius: 2px;
     position: absolute;
     right: 17px;
-    bottom: 20px;
+    bottom: 22px;
     cursor: pointer;
     border: none;
     outline: none;
@@ -352,7 +353,7 @@ time {
     font-size: 15px;
     line-height: 20px;
     font-weight: 500;
-    background-color: var(--var-color-d);
+    background-color: #4b6bfb0d;
     border-radius: 6px;
     padding: 4px 10px;
     margin-top: var(--var-sz);
@@ -363,7 +364,7 @@ time {
 
 footer {
     margin-top: 80px;
-    background-color: var(--var-color-e);
+    background-color: var(--var-color-f6);
     border-top: 1px solid var(--var-color-e);
     padding-top: 20px;
     line-height: 25px;
@@ -528,6 +529,11 @@ a {
 
 .logo-footer span a p {
     font-weight: 400;
+    color: var(--var-color-14);
+}
+
+.logo-footer span a p span {
+    color: var(--var-color-3);
 }
 
 strong {
