--- a/asset/style/single-post.css
+++ b/asset/style/single-post.css
@@ -2,44 +2,44 @@
 
 @font-face {
     font-family: 'WorkSans';
-    src: url(../font/Work_Sans/static/WorkSans-Bold.ttf);
+    src: url(../font/Work_Sans/WorkSans-Bold.ttf);
     font-weight: 700;
 }
 
 @font-face {
     font-family: 'WorkSans';
-    src: url(../font/Work_Sans/static/WorkSans-SemiBold.ttf);
+    src: url(../font/Work_Sans/WorkSans-SemiBold.ttf);
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'WorkSans';
-    src: url(../font/Work_Sans/static/WorkSans-Medium.ttf);
+    src: url(../font/Work_Sans/WorkSans-Medium.ttf);
     font-weight: 500;
 }
 
 @font-face {
     font-family: 'WorkSans';
-    src: url(../font/Work_Sans/static/WorkSans-Regular.ttf);
+    src: url(../font/Work_Sans/WorkSans-Regular.ttf);
     font-weight: 400;
 }
 
 /*Font Plus Jakarta Sans*/
 @font-face {
     font-family: 'PlusJakartaSans';
-    src: url(../font/Plus_Jakarta_Sans/static/PlusJakartaSans-Regular.ttf);
+    src: url(../font/Plus_Jakarta_Sans/PlusJakartaSans-Regular.ttf);
     font-weight: 400;
 }
 
 @font-face {
     font-family: 'PlusJakartaSans';
-    src: url(../font/Plus_Jakarta_Sans/static/PlusJakartaSans-SemiBold.ttf);
+    src: url(../font/Plus_Jakarta_Sans/PlusJakartaSans-SemiBold.ttf);
     font-weight: 600;
 }
 
 @font-face {
     font-family: 'PlusJakartaSans';
-    src: url(../font/Plus_Jakarta_Sans/static/PlusJakartaSans-ExtraBold.ttf);
+    src: url(../font/Plus_Jakarta_Sans/PlusJakartaSans-ExtraBold.ttf);
     font-weight: 800;
 }
 
@@ -73,6 +73,8 @@ body {
     --var-color-f4: #f4f4f5;
     --var-color-d: #dcdddf;
     --var-color-white: #fff;
+    --var-color-f6: #F6F6F7;
+    --var-color-14: #141624;
 }
 
 .width-800 {
@@ -154,7 +156,7 @@ nav {
     display: flex;
     border: none;
     outline: none;
-    padding: 8px 36px 8px 16px;
+    padding: 10px 36px 10px 16px;
     border-radius: 5px;
 }
 
@@ -170,7 +172,7 @@ nav {
     border-radius: 2px;
     position: absolute;
     right: 17px;
-    bottom: 20px;
+    bottom: 22px;
     cursor: pointer;
     border: none;
     outline: none;
@@ -252,6 +254,11 @@ main article p {
     background-color: var(--var-color-button);
     color: var(--var-color-white);
     font-size: 14px;
+    font-weight: 500;
+    border-radius: 6px;
+    padding: 4px 10px;
+    margin-top: var(--var-sz);
+    line-height: 20px;
 }
 
 .form-introduce h2 {
@@ -290,16 +297,7 @@ time {
     font-weight: 400;
 }
 
-.tag {
-    font-weight: 500;
-    color: var(--var-color-button);
-    font-size: 15px;
-    line-height: 20px;
-    background-color: var(--var-color-d);
-    border-radius: 6px;
-    padding: 4px 10px;
-    margin-top: var(--var-sz);
-}
+
 
 .user img {
     width: 36px;
@@ -364,7 +362,7 @@ time {
 
 footer {
     margin-top: 80px;
-    background-color: var(--var-color-e);
+    background-color: var(--var-color-f6);
     border-top: 1px solid var(--var-color-e);
     padding-top: 20px;
     line-height: 25px;
@@ -520,6 +518,11 @@ a {
 
 .logo-footer span a p {
     font-weight: 400;
+    color: var(--var-color-14);
+}
+
+.logo-footer span a p span {
+    color: var(--var-color-3);
 }
 
 strong {
